--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "flowbite": "^1.6.5",
-        "font-awesome": "^4.7.0"
+        "font-awesome": "^4.7.0",
+        "jquery": "^3.7.0"
     }
 }
