--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@vitejs/plugin-react": "^4.0.0",
+        "@vitejs/plugin-vue": "^4.2.3",
         "autoprefixer": "^10.4.14",
         "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.7.5",
-        "postcss": "^8.4.23",
+        "laravel-vite-plugin": "^0.7.8",
+        "postcss": "^8.4.24",
         "tailwindcss": "^3.3.2",
-        "vite": "^4.0.0"
+        "vite": "^4.3.9"
+    },
+    "dependencies": {
+        "flowbite": "^1.6.5",
+        "flowbite-datepicker": "^1.2.2"
     }
 }
