--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
         "build": "vite build"
     },
     "devDependencies": {
-
         "@tailwindcss/forms": "^0.5.2",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
@@ -17,18 +16,17 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "flowbite": "^1.6.5",
-        "font-awesome": "^4.7.0",
-        "jquery": "^3.7.0",
-
- 
-        "flowbite-datepicker": "^1.2.2",
         "@vitejs/plugin-react": "^4.0.0",
         "@vitejs/plugin-vue": "^4.2.3",
         "autoprefixer": "^10.4.14",
         "axios": "^1.1.2",
+        "flowbite": "^1.6.5",
+        "flowbite-datepicker": "^1.2.2",
+        "font-awesome": "^4.7.0",
+        "jquery": "^3.7.0",
         "laravel-vite-plugin": "^0.7.8",
         "postcss": "^8.4.24",
+        "select2": "^4.1.0-rc.0",
         "tailwindcss": "^3.3.2",
         "vite": "^4.3.9"
     }
