- adding more contact info to database - Add location form but yet the map box

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+/public/img/qrcode_payments/
+/public/img/user_idcard_images/
+/public/img/campaign_images/
