--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "watch": "vite build --watch"
     },
     "devDependencies": {
-
         "@tailwindcss/forms": "^0.5.2",
-        "alpinejs": "^3.4.2",
+        "alpinejs": "^3.12.2",
         "autoprefixer": "^10.4.2",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.5",
@@ -17,16 +17,14 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "flowbite": "^1.6.5",
-        "font-awesome": "^4.7.0",
-        "jquery": "^3.7.0",
-
- 
-        "flowbite-datepicker": "^1.2.2",
         "@vitejs/plugin-react": "^4.0.0",
         "@vitejs/plugin-vue": "^4.2.3",
         "autoprefixer": "^10.4.14",
         "axios": "^1.1.2",
+        "flowbite": "^1.6.5",
+        "flowbite-datepicker": "^1.2.2",
+        "font-awesome": "^4.7.0",
+        "jquery": "^3.7.0",
         "laravel-vite-plugin": "^0.7.8",
         "postcss": "^8.4.24",
         "tailwindcss": "^3.3.2",
